# apps/mobile-app/src/api/requests/tema.ts
@@ -1,0 +1,6 @@
+import type { GetTemasResponseDto } from '@mathmind/shared-types'
+import { fetchClient } from '../fetchClient'
+
+export function getTemasRequest(): Promise<GetTemasResponseDto> {
+  return fetchClient<GetTemasResponseDto>('/temas')
+}
